# SaltViewer

./: .gitignore  README.md  archive.py  archived_image_viewer.py  icon.py  pyproject.toml  salt_viewer.py  setup.py  sv.py
salt_viewer/: archive.py  salt_viewer.py
